security-g.tf
resource "aws_security_group" "mini-project-sg" {
  name        = "mini-project-sg"
  description = "Allow HTTP & ssh traffic"
  vpc_id = aws_vpc.mini-prod-vpc.id

  ingress {
    from_port   = 80 
    to_port     = 80 
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = [ "0.0.0.0/0" ]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  } 
  lifecycle {
    ignore_changes = all
  }
}
